--- a/avstyle.css
+++ b/avstyle.css
@@ -9,9 +9,7 @@
 /* Header Universal Description */
 .header {
   top: 0vh;
-  height: 5vh;
-  position: -webkit-sticky; /* Safari */
-  position: sticky; }
+  height: 5vh; }
 
 /* Footer Universal Description */
 .footer {
@@ -28,8 +26,13 @@ body {
 a {
   text-decoration: none; }
 
+.parent-center{
+  clear: left;
+  float: center;
+  position: absolute;
+  left: 0%;}
 /* Single Static Elements */
-#logo {
+.logo {
   background: none;
   border: 0;
   float: left;
@@ -72,7 +75,7 @@ a {
   font-size: 50px;
   color: #000000;
   letter-spacing: 1px; }
-#letstalk {
+.letstalk {
   background: none;
   border: 0;
   position:absolute;
@@ -114,8 +117,8 @@ a {
 
 .connectbuttonlinkedin {
   border: 0;
-  width: 2.14rem;
-  height: 2.14rem;
+  width: 2.9rem;
+  height: 2.9rem;
   position: absolute;
   top: 55.07rem;
   left: 32.64rem;
@@ -131,8 +134,8 @@ a {
 
 .connectbuttonemail {
   border: 0;
-  width: 2.14rem;
-  height: 2.14rem;
+  width: 2.9rem;
+  height: 2.9rem;
   position: absolute;
   top: 55.07rem;
   left: 35.64rem;
@@ -148,6 +151,7 @@ a {
 
 .image1 {
   position: absolute;
+  display: grid;
   top: 19.79rem;
   left: 9.29rem;
 }
